Simplify goals navigation and polish admin actions

--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 
     /* Objectifs */
     .goal-header{ display:flex; align-items:center; justify-content:space-between; gap:1rem; flex-wrap:wrap; margin-bottom:12px; }
+    .goal-nav{ display:flex; justify-content:center; }
+    .goal-nav-button{ width:2.75rem; height:2.75rem; padding:0; border-radius:999px; display:inline-flex; align-items:center; justify-content:center; font-size:1.1rem; }
     .goal-timeline{ display:grid; gap:12px; padding:8px 0; }
     .goal-month{ background:#fff; border-radius:16px; box-shadow:0 10px 28px rgba(79,70,229,.08); padding:16px; border:1px solid rgba(148,163,184,.2); }
     .goal-month--current{ border-color:var(--accent-400); box-shadow:0 12px 32px rgba(99,102,241,.14); }
