--- a/admin.html
+++ b/admin.html
@@ -67,6 +67,7 @@
       <noscript>Activez JavaScript pour accéder à l’espace administrateur.</noscript>
     </div>
   </main>
+  <script src="admin-config.js"></script>
   <script type="module" src="admin-auth.js"></script>
 </body>
 </html>
