Fix admin workflow and avoid redirect on missing hash

--- a/admin.html
+++ b/admin.html
@@ -63,7 +63,7 @@
     <div class="card">
       <h1>Zone administrateur</h1>
       <p id="admin-login-status">Initialisation…</p>
-      <p class="helper">Vous serez redirigé après vérification.</p>
+      <p id="admin-login-helper" class="helper">Vous serez redirigé après vérification.</p>
       <noscript>Activez JavaScript pour accéder à l’espace administrateur.</noscript>
     </div>
   </main>
