--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="fr">
 <head>
+  <script>
+    // Redirection automatique vers l'espace administrateur lorsqu'on arrive sur l'URL racine
+    window.location.replace('admin.html');
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Habitudes &amp; Pratique</title>
